# cornetto

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: publish.yml  tests.yml
cornetto/: __init__.py  core.py  kde.py  stats.py  styles.py
docs/: api.md  examples.md  for-llms.md  gallery_conf.py  gen_plots.py  guide.md  index.md  performance.md  quick-corner.md  quickstart.md
docs/examples/: README.md  plot_0_corner.py  plot_1_marginal.py  plot_2_trace.py  plot_3_advanced.py
docs/notebooks/: quickstart.ipynb
docs/reference/: index.md
docs/stylesheets/: extra.css
scripts/: profile.py
tests/: test_cornetto.py
